--- a/notebooks/minifloat_mx_tutorial.ipynb
+++ b/notebooks/minifloat_mx_tutorial.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,6 +98,50 @@
     "intermediate_input = mx_model.conv.input_quant(x)\n",
     "assert isinstance(intermediate_input, GroupwiseFloatQuantTensor)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from brevitas.quant.experimental.mx_quant_ocp import MXFloatWeightMSE\n",
+    "from brevitas.quant_tensor import GroupwiseFloatQuantTensor\n",
+    "\n",
+    "\n",
+    "class MXFloat8Weight(MXFloatWeightMSE, Fp8e4m3Mixin):\n",
+    "    # The group dimension for the weights it is automatically identified based on the layer type\n",
+    "    # If a new layer type is used, it can be manually specified\n",
+    "    pass\n",
+    "\n",
+    "class MXFloat8Act(MXFloatAct, Fp8e4m3Mixin):\n",
+    "    # It is necessary to specify the group dimension for the activation quantization\n",
+    "    group_dim = 1\n",
+    "\n",
+    "\n",
+    "class MXModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.conv = qnn.QuantConv2d(32, 64, 3, weight_quant=MXFloat8Weight, input_quant=MXFloat8Act)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        return self.conv(x)\n",
+    "\n",
+    "mx_model = MXModel()\n",
+    "x = torch.randn(1, 32, 8, 8)\n",
+    "mx_model.eval()\n",
+    "o = mx_model(x)\n",
+    "\n",
+    "intermediate_input = mx_model.conv.input_quant(x)\n",
+    "assert isinstance(intermediate_input, GroupwiseFloatQuantTensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
