--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -32,6 +32,15 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TENSOR\n",
+      "TENSOR\n",
+      "TENSOR\n"
+     ]
+    },
+    {
      "data": {
       "text/markdown": [
        "```python\n",
@@ -122,7 +131,7 @@
       "        [-0.0140,  0.5607]], requires_grad=True) \n",
       "\n",
       "Quantized weight QuantTensor:\n",
-      " QuantTensor(value=tensor([[-0.0046,  0.3803],\n",
+      " IntQuantTensor(value=tensor([[-0.0046,  0.3803],\n",
       "        [-0.5820, -0.5224],\n",
       "        [-0.2704,  0.1879],\n",
       "        [-0.0137,  0.5591]], grad_fn=<MulBackward0>), scale=0.004582525696605444, zero_point=0.0, bit_width=8.0, signed_t=True, training_t=True) \n",
@@ -1190,6 +1199,7 @@
    "source": [
     "torch.manual_seed(0)\n",
     "\n",
+    "from brevitas.inject.enum import ScalingPerOutputType\n",
     "from brevitas.nn import QuantConv1d\n",
     "\n",
     "BATCHES = 1\n",
@@ -1338,10 +1348,9 @@
    "source": [
     "torch.manual_seed(0)\n",
     "\n",
-    "from brevitas.quant import Int8WeightPerTensorFloat\n",
+    "from brevitas.quant import Int8WeightPerChannelFloat\n",
     "\n",
-    "class LearnedIntWeightPerChannelFloat(Int8WeightPerTensorFloat):\n",
-    "    scaling_per_output_channel = True\n",
+    "class LearnedIntWeightPerChannelFloat(Int8WeightPerChannelFloat):\n",
     "    scaling_impl_type = ScalingImplType.PARAMETER_FROM_STATS\n",
     "    restrict_scaling_type = RestrictValueType.LOG_FP\n",
     "    bit_width_impl_type = BitWidthImplType.PARAMETER \n",
