--- a/notebooks/minifloat_mx_tutorial.ipynb
+++ b/notebooks/minifloat_mx_tutorial.ipynb
@@ -138,10 +138,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from brevitas.quant_tensor import GroupwiseIntQuantTensor\n",
+    "from brevitas.quant.experimental.mx_quant_ocp import MXIntWeight\n",
+    "from brevitas.quant.experimental.mx_quant_ocp import MXIntAct\n",
+    "import torch.nn as nn\n",
+    "import brevitas.nn as qnn\n",
+    "import torch\n",
+    "\n",
+    "class MXFloat8Weight(MXIntWeight):\n",
+    "    # The group dimension for the weights it is automatically identified based on the layer type\n",
+    "    # If a new layer type is used, it can be manually specified\n",
+    "    bit_width = 8\n",
+    "\n",
+    "class MXFloat8Act(MXIntAct):\n",
+    "    # It is necessary to specify the group dimension for the activation quantization\n",
+    "    group_dim = 1\n",
+    "    bit_width = 8\n",
+    "\n",
+    "class MXModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.conv = qnn.QuantConv2d(32, 64, 3, weight_quant=MXFloat8Weight, input_quant=MXFloat8Act)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        return self.conv(x)\n",
+    "\n",
+    "mx_model = MXModel()\n",
+    "x = torch.randn(1, 32, 8, 8)\n",
+    "mx_model.eval()\n",
+    "o = mx_model(x)\n",
+    "\n",
+    "intermediate_input = mx_model.conv.input_quant(x)\n",
+    "assert isinstance(intermediate_input, GroupwiseIntQuantTensor)"
+   ]
   }
  ],
  "metadata": {
