Updated groupwise int quant tensor and notebook

--- a/notebooks/minifloat_mx_tutorial.ipynb
+++ b/notebooks/minifloat_mx_tutorial.ipynb
@@ -30,9 +30,9 @@
    ],
    "source": [
     "from brevitas.quant.experimental.float_base import Fp8e4m3Mixin\n",
-    "from brevitas.quant.experimental.mx_quant_ocp import MXFloatWeight\n",
+    "from brevitas.quant.experimental.mx_quant_ocp import MXFloat8e4m3Weight\n",
     "from brevitas.quant.experimental.float_quant_ocp import FpOCPWeightPerTensorFloat, FpOCPActPerTensorFloat\n",
-    "from brevitas.quant.experimental.mx_quant_ocp import MXFloatAct\n",
+    "from brevitas.quant.experimental.mx_quant_ocp import MXFloat8e4m3Act\n",
     "import brevitas.nn as qnn\n",
     "import torch.nn as nn\n",
     "import torch\n",
@@ -72,12 +72,12 @@
     "from brevitas.quant_tensor import GroupwiseFloatQuantTensor\n",
     "\n",
     "\n",
-    "class MXFloat8Weight(MXFloatWeight, Fp8e4m3Mixin):\n",
+    "class MXFloat8Weight(MXFloat8e4m3Weight, Fp8e4m3Mixin):\n",
     "    # The group dimension for the weights it is automatically identified based on the layer type\n",
     "    # If a new layer type is used, it can be manually specified\n",
     "    pass\n",
     "\n",
-    "class MXFloat8Act(MXFloatAct, Fp8e4m3Mixin):\n",
+    "class MXFloat8Act(MXFloat8e4m3Act, Fp8e4m3Mixin):\n",
     "    # It is necessary to specify the group dimension for the activation quantization\n",
     "    group_dim = 1\n",
     "\n",
@@ -105,16 +105,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from brevitas.quant.experimental.mx_quant_ocp import MXFloatWeightMSE\n",
+    "from brevitas.quant.experimental.mx_quant_ocp import MXFloat8e4m3WeightMSE\n",
     "from brevitas.quant_tensor import GroupwiseFloatQuantTensor\n",
     "\n",
     "\n",
-    "class MXFloat8Weight(MXFloatWeightMSE, Fp8e4m3Mixin):\n",
+    "class MXFloat8Weight(MXFloat8e4m3WeightMSE, Fp8e4m3Mixin):\n",
     "    # The group dimension for the weights it is automatically identified based on the layer type\n",
     "    # If a new layer type is used, it can be manually specified\n",
     "    pass\n",
     "\n",
-    "class MXFloat8Act(MXFloatAct, Fp8e4m3Mixin):\n",
+    "class MXFloat8Act(MXFloat8e4m3Act, Fp8e4m3Mixin):\n",
     "    # It is necessary to specify the group dimension for the activation quantization\n",
     "    group_dim = 1\n",
     "\n",
@@ -143,18 +143,18 @@
    "outputs": [],
    "source": [
     "from brevitas.quant_tensor import GroupwiseIntQuantTensor\n",
-    "from brevitas.quant.experimental.mx_quant_ocp import MXIntWeight\n",
-    "from brevitas.quant.experimental.mx_quant_ocp import MXIntAct\n",
+    "from brevitas.quant.experimental.mx_quant_ocp import MXInt8Weight\n",
+    "from brevitas.quant.experimental.mx_quant_ocp import MXInt8Act\n",
     "import torch.nn as nn\n",
     "import brevitas.nn as qnn\n",
     "import torch\n",
     "\n",
-    "class MXFloat8Weight(MXIntWeight):\n",
+    "class MXFloat8Weight(MXInt8Weight):\n",
     "    # The group dimension for the weights it is automatically identified based on the layer type\n",
     "    # If a new layer type is used, it can be manually specified\n",
     "    bit_width = 8\n",
     "\n",
-    "class MXFloat8Act(MXIntAct):\n",
+    "class MXFloat8Act(MXInt8Act):\n",
     "    # It is necessary to specify the group dimension for the activation quantization\n",
     "    group_dim = 1\n",
     "    bit_width = 8\n",
