--- a/notebooks/01_quant_tensor_quant_conv2d_overview.ipynb
+++ b/notebooks/01_quant_tensor_quant_conv2d_overview.ipynb
@@ -664,7 +664,8 @@
     "    zero_point=torch.tensor(zero_point), \n",
     "    bit_width=torch.tensor(float(bit_width)),\n",
     "    signed=True,\n",
-    "    training=True)\n",
+    "    training=True,\n",
+    "    _zero_zero_point=True)\n",
     "quant_tensor_input"
    ]
   },
