Typo + ocp/fnuz quantizers

--- a/notebooks/minifloat_mx_tutorial.ipynb
+++ b/notebooks/minifloat_mx_tutorial.ipynb
@@ -140,7 +140,7 @@
     "```\n",
     "\n",
     "With respect to pre-defined quantizers, Brevitas offers several Groupwise and MX options.\n",
-    "The meain difference between the two is that MX is restricted to group_size=32 and the scale factor must be a power-of-2.\n",
+    "The main difference between the two is that MX is restricted to group_size=32 and the scale factor must be a power-of-2.\n",
     "The user can override these settings but the corresponding output won't be MX compliant.\n",
     "\n",
     "Another difference is that MXFloat relies on the OCP format as underlying data type, while generic groupwise float relies on the non-standard minifloat representation explained above.\n",
