--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -1659,11 +1659,13 @@
     "from brevitas.core.bit_width import BitWidthConst\n",
     "from brevitas.core.quant import IntQuant, RescalingIntQuant\n",
     "from brevitas.core.zero_point import ZeroZeroPoint\n",
+    "from brevitas.core.function_wrapper.misc import Identity\n",
     "\n",
     "tensor_quant = RescalingIntQuant(\n",
     "    int_quant=IntQuant(\n",
     "        float_to_int_impl=RoundSte(),\n",
     "        tensor_clamp_impl=TensorClamp(),\n",
+    "        input_view_impl=Identity,\n",
     "        signed=False,\n",
     "        narrow_range=False),\n",
     "    zero_point_impl=ZeroZeroPoint(),\n",
