--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -1769,6 +1769,7 @@
     "from brevitas.inject import value\n",
     "from brevitas.proxy import WeightQuantProxyFromInjector\n",
     "from brevitas.core.scaling import ParameterScaling\n",
+    "from brevitas.core.function_wrapper.misc import Identity\n",
     "\n",
     "class Int8ActPerTensorFloatParameterFromScratch(ExtendedInjector):\n",
     "    \n",
@@ -1786,11 +1787,12 @@
     "    int_scaling_impl = IntScaling\n",
     "    scaling_impl = ParameterScaling\n",
     "    restrict_scaling_impl = FloatRestrictValue\n",
+    "    input_view_impl = Identity\n",
     "    scaling_shape = ()\n",
     "    bit_width = 8\n",
     "    narrow_range = True\n",
     "    signed = True\n",
-    "    \n",
+    "\n",
     "quant_linear = QuantLinear(2, 4, weight_quant=Int8ActPerTensorFloatParameterFromScratch, bias=False)"
    ]
   },
