--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -1940,7 +1940,7 @@
     "torch.manual_seed(0)\n",
     "\n",
     "from brevitas.export import export_qonnx\n",
-    "from brevitas.quant import Int8WeightPerTensorFloat, Int8ActPerTensorFloat, Int16Bias\n",
+    "from brevitas.quant import Int8ActPerTensorFloat, Int16Bias\n",
     "\n",
     "float_inp = torch.randn(1, 2, 5)\n",
     "\n",
