--- a/notebooks/minifloat_mx_tutorial.ipynb
+++ b/notebooks/minifloat_mx_tutorial.ipynb
@@ -104,7 +104,8 @@
     "o = ocp_fp8_model(x)\n",
     "\n",
     "intermediate_input = ocp_fp8_model.conv.input_quant(x)\n",
-    "assert isinstance(intermediate_input, FloatQuantTensor)"
+    "assert isinstance(intermediate_input, FloatQuantTensor)\n",
+    "assert isinstance(ocp_fp8_model.conv.quant_weight(), FloatQuantTensor)"
    ]
   },
   {
@@ -180,7 +181,84 @@
     "o = mx_model(x)\n",
     "\n",
     "intermediate_input = mx_model.conv.input_quant(x)\n",
-    "assert isinstance(intermediate_input, GroupwiseFloatQuantTensor)"
+    "assert isinstance(intermediate_input, GroupwiseFloatQuantTensor)\n",
+    "assert isinstance(mx_model.conv.quant_weight(), GroupwiseFloatQuantTensor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the input channel dimension is not divisible by group size, padding will be applied."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Non padding weights shape torch.Size([64, 8, 3, 3])\n",
+      "Padded weights shape torch.Size([64, 32, 3, 3])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/giuseppe/miniconda3/envs/brevitas_dev/lib/python3.11/site-packages/torch/nn/modules/conv.py:456: UserWarning: Defining your `__torch_function__` as a plain method is deprecated and will be an error in future, please define it as a classmethod. (Triggered internally at /opt/conda/conda-bld/pytorch_1712608853099/work/torch/csrc/utils/python_arg_parser.cpp:294.)\n",
+      "  return F.conv2d(input, weight, bias, self.stride,\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MXFloat8WeightNoPadding(MXFloat8e4m3Weight, Fp8e4m3Mixin):\n",
+    "    # The group dimension for the weights it is automatically identified based on the layer type\n",
+    "    # If a new layer type is used, it can be manually specified\n",
+    "    group_size = 8\n",
+    "\n",
+    "class MXFloat8ActNoPadding(MXFloat8e4m3Act, Fp8e4m3Mixin):\n",
+    "    # It is necessary to specify the group dimension for the activation quantization\n",
+    "    group_size = 8\n",
+    "    group_dim = 1\n",
+    "\n",
+    "\n",
+    "class MXModelNoPadding(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.conv = qnn.QuantConv2d(8, 64, 3, weight_quant=MXFloat8WeightNoPadding, input_quant=MXFloat8ActNoPadding)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        return self.conv(x)\n",
+    "\n",
+    "class MXModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.conv = qnn.QuantConv2d(8, 64, 3, weight_quant=MXFloat8Weight, input_quant=MXFloat8Act)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        return self.conv(x)\n",
+    "\n",
+    "mx_model_no_padding = MXModelNoPadding()\n",
+    "mx_model = MXModel()\n",
+    "# Make sure that the modules are the same\n",
+    "mx_model_no_padding.load_state_dict(mx_model.state_dict())\n",
+    "\n",
+    "x = torch.randn(1, 8, 8, 8)\n",
+    "mx_model.eval()\n",
+    "mx_model_no_padding.eval()\n",
+    "o_no_padding = mx_model_no_padding(x)\n",
+    "o = mx_model(x)\n",
+    "\n",
+    "# The quant weight of the padded model is different from the non padding one\n",
+    "print(f\"Non padding weights shape {mx_model_no_padding.conv.quant_weight().value.shape}\")\n",
+    "print(f\"Padded weights shape {mx_model.conv.quant_weight().value.shape}\")\n",
+    "\n",
+    "# However, results are still the same \n",
+    "assert torch.allclose(o, o_no_padding)"
    ]
   },
   {
