Fix (mx): input view during quantization (#1005)

--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -1659,11 +1659,13 @@
     "from brevitas.core.bit_width import BitWidthConst\n",
     "from brevitas.core.quant import IntQuant, RescalingIntQuant\n",
     "from brevitas.core.zero_point import ZeroZeroPoint\n",
+    "from brevitas.core.function_wrapper.misc import Identity\n",
     "\n",
     "tensor_quant = RescalingIntQuant(\n",
     "    int_quant=IntQuant(\n",
     "        float_to_int_impl=RoundSte(),\n",
     "        tensor_clamp_impl=TensorClamp(),\n",
+    "        input_view_impl=Identity,\n",
     "        signed=False,\n",
     "        narrow_range=False),\n",
     "    zero_point_impl=ZeroZeroPoint(),\n",
@@ -1767,6 +1769,7 @@
     "from brevitas.inject import value\n",
     "from brevitas.proxy import WeightQuantProxyFromInjector\n",
     "from brevitas.core.scaling import ParameterScaling\n",
+    "from brevitas.core.function_wrapper.misc import Identity\n",
     "\n",
     "class Int8ActPerTensorFloatParameterFromScratch(ExtendedInjector):\n",
     "    \n",
@@ -1784,11 +1787,12 @@
     "    int_scaling_impl = IntScaling\n",
     "    scaling_impl = ParameterScaling\n",
     "    restrict_scaling_impl = FloatRestrictValue\n",
+    "    input_view_impl = Identity\n",
     "    scaling_shape = ()\n",
     "    bit_width = 8\n",
     "    narrow_range = True\n",
     "    signed = True\n",
-    "    \n",
+    "\n",
     "quant_linear = QuantLinear(2, 4, weight_quant=Int8ActPerTensorFloatParameterFromScratch, bias=False)"
    ]
   },
@@ -1936,7 +1940,7 @@
     "torch.manual_seed(0)\n",
     "\n",
     "from brevitas.export import export_qonnx\n",
-    "from brevitas.quant import Int8WeightPerTensorFloat, Int8ActPerTensorFloat, Int16Bias\n",
+    "from brevitas.quant import Int8ActPerTensorFloat, Int16Bias\n",
     "\n",
     "float_inp = torch.randn(1, 2, 5)\n",
     "\n",
